ADD grab scroll on roadmap

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1229,6 +1229,13 @@
             overflow: auto hidden;
             display: flex;
             position: relative;
+            cursor: grab;
+
+            &:active {
+                cursor: grabbing;
+                cursor: -moz-grabbing;
+                cursor: -webkit-grabbing;
+            }
 
             @include customScrollbar;
 
