--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -29,6 +29,38 @@
 }
 
 #home {
+    .scrollToTop {
+        $size: 40px;
+        background: none;
+        color: #fafafa;
+        right: $size;
+        bottom: $size;
+        position: fixed;
+        z-index: 200;
+        cursor: pointer;
+        width: $size;
+        height: $size;
+        transition: opacity 1s ease-in-out;
+        box-shadow: 0 9px 25px 0 rgba(132, 128, 177, 0.28);
+        border: none;
+        outline: none;
+        padding: 0px;
+        margin: 0px;
+
+        & > * {
+            width: 100%;
+            height: 100%;
+        }
+
+        &:hover {
+            filter: brightness(50%);
+        }
+
+        &:active {
+            transform: matrix(0.95, 0, 0, 0.95, 0, 0);
+        }
+    }
+
     .decorationImage {
         position: absolute;
         z-index: -1;
