--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -1,17 +1,6 @@
 /* Bootstrap overrides
 -------------------------------------------------- */
-
-$body: #000;
-$bg-body: #000226;
-$headings-font-weight: 300 !important;
-$primary: #4279e0;
-$hover: #304986;
-$light: #e6f6fd;
-$dark: #242424;
-$white: #fafafa;
-
-$headings-font-weight: 300 !important;
-$a: #1392ff;
+@import "./variables.scss";
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
