--- a/src/pages/Home/bigTitleSlide.module.scss
+++ b/src/pages/Home/bigTitleSlide.module.scss
@@ -1,4 +1,4 @@
-@import "./../../assets/sass/theme.scss";
+@import "./../../assets/sass/variables.scss";
 
 .bigTitleSlide {
     position: relative;
