--- a/src/pages/Home/bonustable.module.scss
+++ b/src/pages/Home/bonustable.module.scss
@@ -1,4 +1,4 @@
-@import "./../../assets/sass/theme.scss";
+@import "./../../assets/sass/variables.scss";
 
 table.bonusTable {
     border-collapse: separate;
