--- a/src/pages/Home/faqQuestionAnswer.module.scss
+++ b/src/pages/Home/faqQuestionAnswer.module.scss
@@ -1,4 +1,4 @@
-@import "./../../assets/sass/theme.scss";
+@import "./../../assets/sass/variables.scss";
 
 .faqQuestionAnswer {
     background-color: #ffffff33;
