--- a/src/components/Layout/Footer/index.scss
+++ b/src/components/Layout/Footer/index.scss
@@ -1,11 +1,12 @@
-@import "./../../../assets/sass/theme.scss";
+@import "./../../../assets/sass/variables.scss";
 
 footer {
     background-color: $white;
     border-radius: 60px 60px 0 0;
+    padding-bottom: 0;
 
     > .content {
-        padding: 2.5rem 0;
+        padding-top: 2.5rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -19,10 +20,52 @@ footer {
 
         > .button {
         }
+
+        > .followUs {
+            padding-left: calc(155px - 77px); // make Followus the same with of angry penguins
+        }
+
         > nav {
             > .followUs {
                 display: none;
             }
+        }
+    }
+
+    .signature {
+        margin-top: 1rem;
+        padding-bottom: 2.5rem;
+
+        > a {
+            color: $dark;
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                background-color: $primary;
+                border-radius: 20px;
+                width: 0%;
+                height: 0.1875rem;
+                margin: auto;
+                transition: width 0.3s ease-in-out;
+            }
+
+            &:hover {
+                color: #3d3d3d99;
+                text-decoration: none;
+
+                &::after {
+                    width: 100%;
+                }
+            }
+        }
+
+        > img {
+            width: 80px;
         }
     }
 }
@@ -33,8 +76,14 @@ footer {
             flex-direction: column;
             gap: 23px;
 
+            > .followUs {
+                padding-left: 0;
+            }
+
             > nav {
-                flex-direction: column;
+                & > div {
+                    flex-direction: column;
+                }
             }
         }
     }
