--- a/src/components/Layout/Navbar/index.scss
+++ b/src/components/Layout/Navbar/index.scss
@@ -1,4 +1,4 @@
-@import "./../../../assets/sass/theme.scss";
+@import "./../../../assets/sass/variables.scss";
 
 header {
     display: flex !important;
