--- a/src/pages/Home/bonuspopup.module.scss
+++ b/src/pages/Home/bonuspopup.module.scss
@@ -2,6 +2,8 @@
 
 .content {
     padding: 25px 20px;
+    max-height: 100%;
+    overflow: auto;
 
     .information {
         text-align: center;
