--- a/src/pages/Home/popup.module.scss
+++ b/src/pages/Home/popup.module.scss
@@ -1,7 +1,7 @@
 @import "./../../assets/sass/theme.scss";
 
 .popup {
-    z-index: 50;
+    z-index: 71;
     display: flex;
     flex-direction: column;
     background-color: $white;
@@ -10,6 +10,7 @@
     width: 400px;
     max-width: calc(100% - 30px);
     box-shadow: 0 0 15px #00000042;
+    max-height: calc(100vh - 30px);
 
     &.bottom {
         transition: bottom 0.3s ease-in-out;
