--- a/src/components/Layout/NavElements/index.module.scss
+++ b/src/components/Layout/NavElements/index.module.scss
@@ -1,50 +1,64 @@
 @import "./../../../assets/sass/variables.scss";
 
-.navLinksContainer {
+.nav {
     display: flex;
     align-items: center;
-    gap: 25px;
+    flex-direction: column;
+    justify-content: center;
 
-    > a {
-        color: $dark;
-        font-size: 1.375rem;
-        font-weight: bold;
-        font-family: "CHEDROS", sans-serif;
-        position: relative;
+    .navLinksContainer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 25px;
 
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            background-color: $primary;
-            border-radius: 20px;
-            width: 0%;
-            height: 0.1875rem;
-            margin: auto;
-            transition: width 0.3s ease-in-out;
-        }
-
-        &:hover {
-            color: #3d3d3d99;
-            text-decoration: none;
+        > a {
+            color: $dark;
+            font-size: 1.375rem;
+            font-weight: bold;
+            font-family: "CHEDROS", sans-serif;
+            position: relative;
 
             &::after {
-                width: 100%;
+                content: "";
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                background-color: $primary;
+                border-radius: 20px;
+                width: 0%;
+                height: 0.1875rem;
+                margin: auto;
+                transition: width 0.3s ease-in-out;
+            }
+
+            &:hover {
+                color: #3d3d3d99;
+                text-decoration: none;
+
+                &::after {
+                    width: 100%;
+                }
             }
         }
     }
 
     &.isOpen {
         flex-direction: column;
-        align-items: flex-start;
         padding: 130px 60px 20px 40px;
         min-width: 30vw;
         height: 100%;
 
-        > a {
-            color: $white;
+        .navLinksContainer {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            gap: 25px;
+
+            > a {
+                color: $white;
+            }
         }
     }
 }
