--- a/src/components/Layout/Navbar/index.scss
+++ b/src/components/Layout/Navbar/index.scss
@@ -86,6 +86,12 @@ header {
             display: flex;
         }
 
+        > .icon.cross {
+            position: fixed;
+            top: 25px;
+            right: 25px;
+        }
+
         > .navBar {
             display: none;
         }
@@ -96,11 +102,13 @@ header {
 
         &.is-open {
             > .navBar {
-                display: block;
-                position: absolute;
+                position: fixed;
                 top: 0;
                 right: 0;
                 bottom: 0;
+                display: block;
+                height: 100vh;
+
                 background-color: $dark;
 
                 > nav {
