--- a/src/pages/Home/awardpopup.module.scss
+++ b/src/pages/Home/awardpopup.module.scss
@@ -32,6 +32,9 @@
 
     > img {
         border-radius: 30px 30px 0 0;
+        max-width: 100%;
+        height: auto;
+        align-self: flex-start;
     }
 
     > .content {
