REMOVE unused logs + ADD red color on disconnect button

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -318,6 +318,11 @@
             > .connectWallet {
                 padding-left: 80px;
                 padding-right: 80px;
+                
+                &.danger {
+                    background-color: #c23737;
+
+                }
             }
 
             > h2 {
