ADD mint transaction

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -315,7 +315,7 @@
                 }
             }
 
-            > .connectWallet {
+            .connectWallet {
                 padding-left: 80px;
                 padding-right: 80px;
                 
