--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -33,6 +33,7 @@
         position: absolute;
         bottom: 50px;
         left: 50%;
+        transform: translateX(-50%);
     }
 
     .scrollToTop {
