ADD hover for disconnect button

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -323,6 +323,9 @@
                 &.danger {
                     background-color: #c23737;
 
+                    &:hover {
+                        background-color: #611b1b;                        
+                    }
                 }
             }
 
