--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -96,17 +96,20 @@
     > .right {
         background-color: #0000003b;
         backdrop-filter: blur(24px) contrast(1.4);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        justify-items: stretch;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // justify-items: stretch;
         padding: 120px 70px 30px 70px;
         color: $white;
 
         > .content {
-            display: grid;
-            grid-template-areas: "title"  "mint" "advantages";
-            justify-items: flex-start;        
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+                        
+            justify-content: space-around !important; 
+            align-items: center !important;
             max-width: 700px;
             margin: 0 auto;
 
@@ -117,7 +120,7 @@
                 font-weight: bold;
             }
 
-            > .advantages {
+            .advantages {
                 grid-area: advantages;
                 position: relative;                
                 overflow: auto;
@@ -126,12 +129,12 @@
                 margin-bottom: 25px;
                 margin-top: 25px;
                 height: 30vh;
-                border-radius: 6px !important;
+                border-radius: 6px !important;                
 
                 @include customScrollbar;
             }
 
-            > .mintButton {
+            .mintButton {
                 grid-area: mint;
                 display: flex;
                 align-items: center;
