--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -40,6 +40,12 @@
     display: grid;
     grid-template-columns: 6fr 5fr;
 
+    .balance {
+        font-size: 14px;
+        text-align: right;
+        margin-right: 20px;
+    }
+
     > .header {
         z-index: 2;
         position: absolute;
