RETAKE balance position

--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -114,7 +114,7 @@
             flex-direction: column;
             height: 100%;
                         
-            justify-content: space-around !important; 
+            justify-content: space-between !important; 
             align-items: center !important;
             max-width: 700px;
             margin: 0 auto;
