ADD bought items on table + ADD not enough elrond to buy any

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -239,7 +239,12 @@ button,
     }
   }
 
-  &:hover {
+  &.disabled {
+    cursor: default;
+    background-color: grey;
+  }
+
+  &:hover:not(.disabled) {
     background-color: $hover;
     color: $light;
     text-decoration: none;
