--- a/src/pages/Home/Mint/bonustable.module.scss
+++ b/src/pages/Home/Mint/bonustable.module.scss
@@ -19,4 +19,8 @@ table.bonusTable {
     .highlighted {
         background-color: rgba($primary, 0.3) !important;
     }
+
+    .bought {
+        background-color: rgba(#008000, 0.3) !important;
+    }
 }
