--- a/src/pages/Home/faqQuestionAnswer.module.scss
+++ b/src/pages/Home/faqQuestionAnswer.module.scss
@@ -17,10 +17,10 @@
         align-items: center;
         padding: 15px 15px 15px 25px;
         cursor: pointer;
-
+        
         > .question {
-            font-family: "CHEDROS", sans-serif;
-            font-size: 1.2rem;
+            font-family: "Montserrat", sans-serif;
+            font-size: 1rem;
             font-weight: bold;
             color: $white;
             position: relative;
@@ -43,7 +43,7 @@
         display: none;
         padding: 0 100px 30px 25px;
         font-family: "Montserrat", sans-serif;
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: normal;
         color: $white;
         overflow: hidden;
