ADD select multi eggs

--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -6,6 +6,8 @@ $hover: #304986;
 $light: #e6f6fd;
 $dark: #242424;
 $white: #fafafa;
+$red: #EF644B;
+$red-hover: #D64C33;
 
 $headings-font-weight: 300 !important;
 $a: #1392ff;
