--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -146,7 +146,7 @@
                 padding-bottom: 0;
                 margin-bottom: 25px;
                 margin-top: 25px;
-                height: 30vh;
+                // height: 30vh;
                 border-radius: 0px !important;   
                 overflow: hidden;             
                 width: 100%;
@@ -155,7 +155,7 @@
                     @include customScrollbar;      
                     
                     tr td {
-                        width: 50%;
+                        width: 33%;
                     }
                 }
             }
