--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -1,7 +1,6 @@
 @import "./../../../assets/sass/variables.scss";
 
-@mixin customScrollbar {            
-
+@mixin customScrollbar {
     &::-webkit-scrollbar {
         height: 6px;
         width: 6px;
@@ -106,18 +105,19 @@
         // justify-items: stretch;
         padding: 120px 70px 30px 70px;
         color: $white;
+        height: calc(100vh - 70px - 70px);
 
         > .content {
             display: flex;
             flex-direction: column;
-            height: 100%;
             width: 100%;
-                        
-            justify-content: space-between !important; 
+            height: 100%;
+
+            justify-content: space-between !important;
             align-items: center !important;
             max-width: 700px;
             margin: 0 auto;
-            
+
             > h1 {
                 grid-area: title;
                 font-family: "CHEDROS", sans-serif;
@@ -125,11 +125,16 @@
                 font-weight: bold;
             }
 
-            >div {
-
+            > div {
                 width: 100%;
-                
-                
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+
+                > *:not(.advantages) {
+                    flex-shrink: 0;
+                }
+
                 .alert {
                     width: 100%;
                     flex-grow: 0;
@@ -138,85 +143,84 @@
                     align-self: flex-start;
                 }
 
-            .advantages {
-                grid-area: advantages;
-                position: relative;                
-                overflow: auto;
-                display: block;      
-                padding-bottom: 0;
-                margin-bottom: 25px;
-                margin-top: 25px;
-                // height: 30vh;
-                border-radius: 0px !important;   
-                overflow: hidden;             
-                width: 100%;
-                
-                > table {
-                    @include customScrollbar;      
-                    
-                    tr td {
-                        width: 33%;
+                .advantages {
+                    grid-area: advantages;
+                    position: relative;
+                    overflow: auto;
+                    display: block;
+                    padding-bottom: 0;
+                    margin-bottom: 25px;
+                    margin-top: 25px;
+                    border-radius: 0px !important;
+                    width: 100%;
+                    overflow: hidden;
+
+                    > table {
+                        @include customScrollbar;
+
+                        tr td {
+                            width: 33%;
+                        }
                     }
                 }
-            }
-            
-            .mintButton {
-                grid-area: mint;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding-left: 2rem;
-                gap: 2rem;
-                border-radius: 9999px;
-                background-color: $white;
-                color: $dark;
-                width: 100%;
-            
-                font-weight: 700;
 
-                > .numberSelector{    
+                .mintButton {
+                    grid-area: mint;
                     display: flex;
                     align-items: center;
-                    justify-content: center;
+                    justify-content: space-between;
+                    padding-left: 2rem;
                     gap: 2rem;
                     border-radius: 9999px;
                     background-color: $white;
                     color: $dark;
                     width: 100%;
 
-                    > .minus {
-                        user-select: none;
-                        font-family: "CHEDROS", sans-serif;
-                        font-size: 2rem;
-                        color: $primary;
-                        position: relative;
-                        top: 2px;
-                        cursor: pointer;
+                    font-weight: 700;
+
+                    > .numberSelector {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        gap: 2rem;
+                        border-radius: 9999px;
+                        background-color: $white;
+                        color: $dark;
+                        width: 100%;
+
+                        > .minus {
+                            user-select: none;
+                            font-family: "CHEDROS", sans-serif;
+                            font-size: 2rem;
+                            color: $primary;
+                            position: relative;
+                            top: 2px;
+                            cursor: pointer;
+                        }
+
+                        > .numberSelect {
+                            font-family: "CHEDROS", sans-serif;
+                            font-size: 2rem;
+                            position: relative;
+                            top: 2px;
+                        }
+
+                        > .plus {
+                            user-select: none;
+                            font-family: "CHEDROS", sans-serif;
+                            font-size: 2rem;
+                            color: $primary;
+                            position: relative;
+                            top: 2px;
+                            cursor: pointer;
+                        }
                     }
-                    
-                    > .numberSelect {
-                        font-family: "CHEDROS", sans-serif;
-                        font-size: 2rem;
-                        position: relative;
-                        top: 2px;
+
+                    > .button {
+                        flex-basis: 100%;
                     }
-                    
-                    > .plus {
-                        user-select: none;
-                        font-family: "CHEDROS", sans-serif;
-                        font-size: 2rem;
-                        color: $primary;
-                        position: relative;
-                        top: 2px;
-                        cursor: pointer;
-                    }
-                }
-                    
-                > .button {
-                    flex-basis: 100%;
                 }
             }
-        }
         }
 
         > .info {
@@ -230,51 +234,50 @@
 }
 
 @media (max-width: 1140px) {
-        #mint {
-            display: grid;
-            grid-template-columns: 1fr;
+    #mint {
+        display: grid;
+        grid-template-columns: 1fr;
 
-            > .header {
-                > h1 {
-                    display: block;
-                    font-family: "CHEDROS", sans-serif;
-                    font-size: 5rem;
-                    font-weight: bold;
-                    color: $white;
-                    position: absolute;
-                    top: 100px;
-                    left: 0;
-                    right: 0;
-                    text-align: center;
-                }
-            }
-
-            .right {
-                > .content {
-                    grid-template-areas: "mint" "advantages";
-
-                    > h1 {
-                        display: none;
-                    }
-
-                    > .mintButton {
-                        margin: 0 auto 30px auto;
-                    }
-
-                    .advantages {
-                        height: 300px;
-                    }
-                }
+        > .header {
+            > h1 {
+                display: block;
+                font-family: "CHEDROS", sans-serif;
+                font-size: 5rem;
+                font-weight: bold;
+                color: $white;
+                position: absolute;
+                top: 100px;
+                left: 0;
+                right: 0;
+                text-align: center;
             }
         }
-}
 
+        .right {
+            > .content {
+                grid-template-areas: "mint" "advantages";
 
-@media (max-width: 770px) {
-        #mint {
-            > .right {
-                padding: 15px;
-                backdrop-filter: none;
+                > h1 {
+                    display: none;
+                }
+
+                > .mintButton {
+                    margin: 0 auto 30px auto;
+                }
+
+                .advantages {
+                    height: 300px;
+                }
             }
         }
     }
+}
+
+@media (max-width: 770px) {
+    #mint {
+        > .right {
+            padding: 15px;
+            backdrop-filter: none;
+        }
+    }
+}
