RETAKE increase penguin size

--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -78,6 +78,7 @@
         justify-content: center;
 
         > .emptyPenguin {
+            width: 100%;
             position: relative;
 
             &::after {
@@ -91,7 +92,8 @@
             }
 
             > img {
-                max-width: 100%;
+                // max-width: 100%;
+                width: 100%;
             }
         }
     }
