--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -171,9 +171,8 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
-                    padding-left: 2rem;
-                    gap: 2rem;
                     border-radius: 9999px;
+                    overflow: hidden;
                     background-color: $white;
                     color: $dark;
                     width: 100%;
@@ -184,42 +183,61 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        gap: 2rem;
                         border-radius: 9999px;
                         background-color: $white;
                         color: $dark;
                         width: 100%;
+                        height: 100%;
+                        padding: 0;
+                        margin: 0;
+                        margin-right: -20px;
 
+                        > .numberSelect {
+                            position: absolute;
+                            font-family: "CHEDROS", sans-serif;
+                            font-size: 2rem;
+                            z-index: 5;
+
+                            height: 44.25px;
+                            width: 44.25px;
+
+                            border-radius: 50%;
+
+                            background-color: #fafafa;
+                        }
+
+                        > .plus,
                         > .minus {
                             user-select: none;
                             font-family: "CHEDROS", sans-serif;
                             font-size: 2rem;
                             color: $primary;
                             position: relative;
-                            top: 2px;
                             cursor: pointer;
+                            width: 100%;
+                            height: 100%;
+                            text-align: center;
+
+                            &:hover {
+                                background-color: #c6d7f6;
+                            }
                         }
 
-                        > .numberSelect {
-                            font-family: "CHEDROS", sans-serif;
-                            font-size: 2rem;
-                            position: relative;
-                            top: 2px;
+                        .centerText {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            text-align: center;
                         }
 
                         > .plus {
-                            user-select: none;
-                            font-family: "CHEDROS", sans-serif;
-                            font-size: 2rem;
-                            color: $primary;
-                            position: relative;
-                            top: 2px;
-                            cursor: pointer;
+                            padding-right: 20px;
                         }
                     }
 
-                    > .button {
+                    > .button.mintNow {
                         flex-basis: 100%;
+                        z-index: 2;
                     }
                 }
             }
